crates/model/tests/compile_fail/fsm_entry_not_in_states.rs
// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

// fsm! entry state must exist in states list.
quent_model::state! {
    Idle {}
}

quent_model::fsm! {
    Bad {
        states: { idle: Idle },
        entry: nonexistent,
        exit_from: { idle },
        transitions: {},
    }
}

fn main() {}
